🚀 Production Ready: Backend works on ANY hosting without port/CORS issues
✅ New Features:
- Config Manager: Auto-detects environment & configures ports/CORS
- Works on Render, Heroku, Railway, AWS, Azure, Google Cloud, DigitalOcean
- Graceful shutdown & error recovery
- Better logging & debugging
- Fixed __dirname on Windows/Linux
- Enhanced order tracking with detailed logs

✅ Frontend Updates:
- Auto API configuration (development/production)
- Dynamic backend URL detection
- Better error handling in cart.js
- Updated all API calls to use AppConfig

✅ Documentation:
- PRODUCTION_READY.md - Quick start guide
- HOSTING_GUIDE.md - Complete hosting guide for all platforms
- BACKEND_DEPLOYMENT.md - Deployment instructions
- DEPLOYMENT_GUIDE.md - Full stack deployment
- .env.production.example - Production environment template

✅ Bug Fixes:
- Fixed package.json scripts (index.js path)
- Fixed CORS configuration
- Fixed Socket.IO CORS origins
- Fixed order creation logging
- Added database connection test script

🎯 Result: Push → Deploy → Works! No code changes needed for any hosting platform!

--- a/forentend/checkout.html
+++ b/forentend/checkout.html
@@ -273,6 +273,8 @@
   <script src="js/bootstrap.js"></script>
   <!-- Socket.IO -->
   <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
+  <!-- App Configuration (يجب أن يُحمَّل أولاً) -->
+  <script src="js/config.js"></script>
   <!-- API Service -->
   <script src="js/api.js"></script>
   <!-- custom js -->
