--- a/forentend/index.html
+++ b/forentend/index.html
@@ -1643,6 +1643,7 @@
   <!-- Socket.IO -->
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   <!-- API Service -->
+  <script src="js/auto-api-config.js"></script>
   <script src="js/api.js"></script>
   <!-- Cart System (must load before custom.js) -->
   <script src="js/cart.js"></script>
@@ -1898,6 +1899,9 @@
       });
     });
   </script>
+  
+  <!-- Config Service للإعدادات الديناميكية -->
+  <script src="js/config-service.js"></script>
   
   <!-- Google Map -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
