--- a/forentend/menu.html
+++ b/forentend/menu.html
@@ -699,6 +699,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
   <!-- Socket.IO -->
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+  <!-- App Configuration (يجب أن يُحمَّل أولاً) -->
+  <script src="js/config.js"></script>
   <!-- API Service -->
   <script src="js/api.js"></script>
   <!-- Menu Dynamic Updates -->
