🖼️ Fix images display on homepage
- Fixed image paths for "ورق عنب بالليمون وسط" (f7.png → f7.jpg)
- Fixed image paths for "طبق ملفوف محشي" (f9.png → mlfof.jpg)
- Updated JavaScript cart data with correct image paths
- Added new beverage image (504.jpeg)

--- a/forentend/index.html
+++ b/forentend/index.html
@@ -501,7 +501,7 @@
           <div class="col-md-4">
             <div class="box ">
               <div class="img-box">
-                <img src="images/طبق مشكل كبير.jpg" alt="">
+                <img src="images/o2.jpg" alt="">
               </div>
               <div class="detail-box">
                 <h5>
@@ -1217,7 +1217,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f7.png" alt="">
+                  <img src="images/f7.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -1368,7 +1368,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f9.png" alt="">
+                  <img src="images/mlfof.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -1827,11 +1827,11 @@
           
           // تحديد بيانات المنتج
           if (productName.includes('ورق عنب بالليمون وسط') || productName.includes('ورق عنب بالليمون - كبير')) {
-            productData = { name: 'ورق عنب بالليمون - كبير', price: 340, image: 'images/f7.png' };
+            productData = { name: 'ورق عنب بالليمون - كبير', price: 340, image: 'images/f7.jpg' };
           } else if (productName.includes('كوسا لبنايه')) {
             productData = { name: 'كوسا لبنايه', price: 180, image: 'images/f8.jpg' };
           } else if (productName.includes('طبق ملفوف محشي')) {
-            productData = { name: 'طبق ملفوف محشي', price: 180, image: 'images/f9.png' };
+            productData = { name: 'طبق ملفوف محشي', price: 180, image: 'images/mlfof.jpg' };
           }
           
           // إضافة event listener آمن
