--- a/forentend/menu.html
+++ b/forentend/menu.html
@@ -349,7 +349,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/kosa.JPEG" alt="">
+                  <img src="images/kosa.jpeg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>كوسا محشي بالأرز</h5>
